Use MDX instead of markdown

--- a/src/data/blog/configurar-php-iis.mdx
+++ b/src/data/blog/configurar-php-iis.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Alojar aplicación PHP en servidor IIS"
-metaDescription: "Un breve tutorial de cómo alojar una aplicación PHP en un servidor IIS para desarrollo"
+description: "Un breve tutorial de cómo alojar una aplicación PHP en un servidor IIS para desarrollo"
 publishedAt: 2024-08-21
 ---
 
@@ -36,7 +36,7 @@ En la barra izquierda, en Sitios hacemos clic derecho y seleccionamos Agregar si
 - Enlace:
     - Tipo: `https`
     - Dirección IP: `Todas las direcciones no asignadas`
-    - Puerto: `443` 
+    - Puerto: `443`
     - Nombre del host: `app.internal`
     - Requerir indicación del nombre del servidor: `Sí`
     - Deshabilitar [...] `No`
