--- a/src/data/blog/gobierno-no-aprueba-leyes.mdx
+++ b/src/data/blog/gobierno-no-aprueba-leyes.mdx
@@ -1,6 +1,6 @@
 ---
 title: "El gobierno no 'aprueba una ley' sobre el derecho a rectificación"
-metaDescription: "Hablemos de la frase 'el gobierno aprueba una ley' y por qué no es correcta, poniendo como ejemplo la ley de derecho a rectificación en prensa"
+description: "Hablemos de la frase 'el gobierno aprueba una ley' y por qué no es correcta, poniendo como ejemplo la ley de derecho a rectificación en prensa"
 publishedAt: 2024-12-17
 ---
 
