--- a/src/data/blog/mapa-facil-protomaps.mdx
+++ b/src/data/blog/mapa-facil-protomaps.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Crear un mapa de manera fácil con Protomaps"
-metaDescription: "Una guía rápida para crear un mapa de manera fácil con Protomaps, sin servidor ni historias complicadas"
+description: "Una guía rápida para crear un mapa de manera fácil con Protomaps, sin servidor ni historias complicadas"
 publishedAt: 2025-01-03
 ---
 
@@ -56,7 +56,7 @@ Si estás usando tecnologías JavaScript (ya sea Vite con algún framework, o As
    }
   </style>
  </head>
- 
+
  <body>
   <div id="map"></div>
 
