--- a/src/data/blog/americans-so-much-freedom.mdx
+++ b/src/data/blog/americans-so-much-freedom.mdx
@@ -1,12 +1,18 @@
 ---
 title: "Americans: so much for your \"freedom\""
-metaDescription: "Regarding the \"freedom\" of Americans, the ban of TikTok, and whether Europe should follow suit"
+description: "Regarding the \"freedom\" of Americans, the ban of TikTok, and whether Europe should follow suit"
 publishedAt: 2025-01-17
 ---
 
-<div role="alert" class="note">
+import Alert from '@/components/Alert.astro';
+
+export const components = {
+    Alert
+}
+
+<Alert type="note">
     This article is written in english because it's mainly directed to an international audience.
-</div>
+</Alert>
 
 I've been thinking about the concept of "freedom" lately. It's a word that's thrown around a lot, especially in the United States. Americans are proud of their "freedom" and how they can do whatever they want. But is that really true? They do like to call us out about our "lack of freedom" in Europe and the insane amount of bureaucracy we have to deal with (and they are somewhat right), but they also have their own problems.
 
