Refresh portfolio design and fonts

--- a/src/data/portfolio/mientreno.mdx
+++ b/src/data/portfolio/mientreno.mdx
@@ -1,7 +1,7 @@
 ---
 title: "MiEntreno"
 description: "Creación de un sitio web dinámico con PHP adaptado a móviles y accesible mediante QR en localizaciones físicas"
-technologies: ["dotnet", "sqlserver", "azure", "rabbitmq"]
+technologies: ["dotnet", "azure"]
 ---
 
 Aplicación web para la gestión de entrenamientos deportivos, con una interfaz sencilla y fácil de usar. Desarrollado con ASP.NET Core, Razor Pages y SQL Server, y alojada en Azure App Service.
