--- a/src/data/portfolio/vigo-360.mdx
+++ b/src/data/portfolio/vigo-360.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Vigo 360"
 description: "Desarrollo y publicación de un blog sobre Vigo"
-technologies: ["go", "mysql", "linux"]
+technologies: ["go", "mysql", "ubuntu"]
 ---
 
 Blog sobre Vigo y su entorno, orientado principalmente a hablar de movilidad y toponimia. Desarrollado en Go, con base de datos MySQL y desplegado sobre infraestructura propia.
