Add online and GitHub links for Vigo 360 portfolio project

--- a/src/data/portfolio/vigo-360.mdx
+++ b/src/data/portfolio/vigo-360.mdx
@@ -2,6 +2,8 @@
 title: "Vigo 360"
 description: "Desarrollo y publicación de un blog sobre Vigo"
 technologies: ["go", "mysql", "ubuntu"]
+onlineLink: "https://vigo360.es"
+githubLink: "https://github.com/arielcostas/vigo360"
 ---
 
 Blog sobre Vigo y su entorno, orientado principalmente a hablar de movilidad y toponimia. Desarrollado en Go, con base de datos MySQL y desplegado sobre infraestructura propia.
